crates/aranya-policy-compiler/tests/data/type_errors/update_fact_value_type_invalid_type.fail.policy
fact Foo[x int]=>{y bool}
command MangleFoo {
    seal { return todo() }
    open { return todo() }
    policy {
        finish {
            update Foo[x: 0]=>{y: ?} to {y: 3}
        }
    }
}
